feat: adds rabbitmq publisher for the scraper engine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,9 @@ services:
       - /home/usman/postgres-data:/var/lib/postgresql/data
       - ./sql/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     restart: unless-stopped
-
+  rabbit:
+    image: rabbitmq:4.1.5-management-alpine
+    ports:
+      - "5002:5672"
+      - "15672:15672"
   engine:
