--- a/internal/scraper-engine/Dockerfile
+++ b/internal/scraper-engine/Dockerfile
@@ -1,10 +1,10 @@
-FROM golang:1.24.2
+FROM golang:1.24
 
 WORKDIR /app
 
 COPY go.mod go.sum ./
 
-RUN go mod download
+RUN go mod tidy && go mod download
 
 COPY *.go ./
 
